// Copyright 2021 Victory Fintech Co. Ltd.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vdx.fee.api";
option go_package = "public/domain";

package fee;

import "base.proto";

message GetFeeRateRequest {
  int64 owner_id = 1;
}

message FeeRateReply {
  int64 owner_id = 1;
  base.Decimal maker_fee_rate = 2;
  base.Decimal taker_fee_rate = 3;
  int32 tier = 4;
  base.Decimal total_volume = 5;  //30天交易量
  base.Decimal maker_volume = 6;  //30天maker数量
}

message ListFeeRateRequest {
  repeated int64 owner_ids = 1;
}

message ListFeeRateReply {
  repeated FeeRateReply fee_rates = 1;
}

