// Copyright 2021 Victory Fintech Co. Ltd.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vdx.fee.api";
option go_package = "public/domain";

package fee;

import "google/protobuf/empty.proto";
import "fee_model.proto";

service FeeService {

  rpc GetFeeRate(GetFeeRateRequest) returns(FeeRateReply);
  rpc ListFeeRate(ListFeeRateRequest) returns (ListFeeRateReply);
}
